--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,6 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
