--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "brotzka/laravel-dotenv-editor": "^2.2",
         "illuminate/contracts": "^10.0",
         "php-flasher/flasher-laravel": "^1.13",
+        "spatie/laravel-markdown": "^2.3",
         "spatie/laravel-package-tools": "^1.14.0"
     },
     "autoload": {
